--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "babel-plugin-styled-components": "^1.9.2",
+    "grommet": "^2.2.1",
+    "grommet-icons": "^4.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
