--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-plugin-react-intl": "^3.0.1",
     "babel-plugin-styled-components": "^1.9.2",
     "grommet": "^2.2.1",
     "grommet-icons": "^4.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-intl": "^2.7.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "styled-components": "^4.1.2"
